--- a/InfoWeb/InfoWeb/src/main/resources/static/login.html
+++ b/InfoWeb/InfoWeb/src/main/resources/static/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>InfoWeb — Iniciar sesión</title>
-    <link rel="stylesheet" href="../css/Infoweb.css">
+    <link rel="stylesheet" href="../templates/Infoweb.css" /> 
 </head>
 <body class="login">
     <main class="login-card">
