Interccion con la bd

--- a/InfoWeb/src/main/resources/static/login.html
+++ b/InfoWeb/src/main/resources/static/login.html
@@ -15,8 +15,8 @@
 
         <form action="inicio.html" method="post" novalidate>
             <div class="form-group">
-                <label for="email">Correo electrónico</label>
-                <input type="email" id="email" name="email" placeholder="nombre@dominio.com" required />
+                <label for="email">Usuario</label>
+                <input type="email" id="email" name="email" placeholder="Usuario" required />
             </div>
 
             <div class="form-group">
