Implementacion de vistas

--- a/InfoWeb/src/main/resources/static/inicio.html
+++ b/InfoWeb/src/main/resources/static/inicio.html
@@ -16,7 +16,9 @@
         
         <nav class="main-nav">
             <a href="inicio.html" class="active">Noticias</a>
-            <a href="perfil.html">Mi Perfil</a>
+            <a href="noticia.html">Agregar Noticia</a>
+            <a href="tema.html">Agregar Tema</a>
+            <a href="subtema.html">Agregar Subtema</a>
             <a href="login.html" class="logout-btn">Salir</a>
         </nav>
     </header>
