--- a/InfoWeb/src/main/resources/static/login.html
+++ b/InfoWeb/src/main/resources/static/login.html
@@ -16,12 +16,12 @@
         <form action="inicio.html" method="post" novalidate>
             <div class="form-group">
                 <label for="email">Usuario</label>
-                <input type="email" id="email" name="email" placeholder="Usuario" required />
+                <input type="email" id="email" name="username" placeholder="Usuario" required />
             </div>
 
             <div class="form-group">
                 <label for="password">Contraseña</label>
-                <input type="password" id="password" name="password" placeholder="••••••••" required />
+                <input type="password" id="password" name="contrasena" placeholder="••••••••" required />
             </div>
 
             <div class="forgot">
